# jpegasus

./: .gitignore  Cargo.toml  Justfile  LICENSE.txt  README.md  build.rs
.github/workflows/: build.yaml
src/: context.rs  lib.rs  param_util.rs  render.rs  types.rs  u16_conversion.rs  window_handle.rs
src/pipeline/: convert.rs  mod.rs
src/resources/: dct.glsl  dct.wgsl  error.glsl  to_fp.glsl  to_u15.glsl
src/shaders/: dct_pipeline.wgsl
tests/: render.rs
